# QuantumQuillDatabase

./: CMakeLists.txt  README.md  main.cpp
Commands/: AddColumn.hpp  AddRow.hpp  Command.hpp  CreateRelation.hpp  CreateTable.hpp  DropRelation.hpp  DropTable.hpp  Help.hpp  LoadDatabase.hpp  RemoveRow.hpp  SaveDatabase.hpp  Select.hpp  UpdateRow.hpp
Core/: ClientInput.cpp  ClientInput.hpp  Database.cpp  Database.hpp  Engine.cpp  Engine.hpp  Logdb.cpp  Logdb.hpp  QueryInterpreter.hpp  Reader.cpp  Reader.hpp  Writer.cpp  Writer.hpp
Parsers/: LogicalExpressions.hpp  SelectQuery.hpp
Structures/: Functions.cpp  Functions.hpp  Structures.hpp  Types.hpp
